--- a/package.json
+++ b/package.json
@@ -16,80 +16,80 @@
   "engines": {
     "node": ">=6.9"
   },
-  "scripts": {
-    "cleanup": "shx rm -rf umd lib lib-esm typings coverage docs",
-    "prebuild": "npm run cleanup && npm run verify",
-    "build": " tsc && tsc --module es2015 --target es2015 --outDir lib-esm && webpack",
-    "docs": "typedoc -p . --theme minimal --target 'es6' --excludeNotExported --excludePrivate --ignoreCompilerErrors --exclude \"**/src/**/__tests__/*.*\" --out docs src/",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "ts:lint": "tslint  --project tsconfig.json --type-check \"src/**/*.tsx\" \"src/**/*.ts\"",
-    "ts:lint:fix": "npm run ts:lint -- --fix",
-    "ts:format": "tsfmt --verify",
-    "ts:format:fix": "tsfmt -r",
-    "ts:style": "npm run ts:format && npm run ts:lint",
-    "ts:style:fix": "npm run ts:format:fix && npm run ts:lint:fix",
-    "verify": "npm run ts:style && npm test",
-    "commit": "git-cz",
-    "commitmsg": "validate-commit-msg",
-    "prepush": "npm run verify",
-    "prerelase": "npm run build",
-    "release": "standard-version",
-    "postrelease": "npm run release:github && npm run release:npm",
-    "release:github": "git push --no-verify --follow-tags origin master",
-    "release:npm": "npm publish",
-    "release:preflight": "irish-pub",
-    "release:preflight:package": "npm pack",
-    "size": "shx echo \"Gzipped Size:\" && cross-var strip-json-comments --no-whitespace $npm_package_umd_main | gzip-size"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    },
-    "validate-commit-msg": {
-      "types": "conventional-commit-types",
-      "maxSubjectLength": 120
-    }
-  },
-  "jest": {
-    "globals": {
-      "__TS_CONFIG__": {
-        "module": "commonjs"
-      }
-    },
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "modulePathIgnorePatterns": [
-      "/^((?!src).)/"
-    ],
-    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
-    "coveragePathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/lib/",
-      "<rootDir>/lib-esm/",
-      "<rootDir>/umd/",
-      "<rootDir>/src/.*(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 85
-      }
-    }
-  },
+  // "scripts": {
+  //   "cleanup": "shx rm -rf umd lib lib-esm typings coverage docs",
+  //   "prebuild": "npm run cleanup && npm run verify",
+  //   "build": " tsc && tsc --module es2015 --target es2015 --outDir lib-esm && webpack",
+  //   "docs": "typedoc -p . --theme minimal --target 'es6' --excludeNotExported --excludePrivate --ignoreCompilerErrors --exclude \"**/src/**/__tests__/*.*\" --out docs src/",
+  //   "test": "jest",
+  //   "test:watch": "jest --watch",
+  //   "test:coverage": "jest --coverage",
+  //   "ts:lint": "tslint  --project tsconfig.json --type-check \"src/**/*.tsx\" \"src/**/*.ts\"",
+  //   "ts:lint:fix": "npm run ts:lint -- --fix",
+  //   "ts:format": "tsfmt --verify",
+  //   "ts:format:fix": "tsfmt -r",
+  //   "ts:style": "npm run ts:format && npm run ts:lint",
+  //   "ts:style:fix": "npm run ts:format:fix && npm run ts:lint:fix",
+  //   "verify": "npm run ts:style && npm test",
+  //   "commit": "git-cz",
+  //   "commitmsg": "validate-commit-msg",
+  //   "prepush": "npm run verify",
+  //   "prerelase": "npm run build",
+  //   "release": "standard-version",
+  //   "postrelease": "npm run release:github && npm run release:npm",
+  //   "release:github": "git push --no-verify --follow-tags origin master",
+  //   "release:npm": "npm publish",
+  //   "release:preflight": "irish-pub",
+  //   "release:preflight:package": "npm pack",
+  //   "size": "shx echo \"Gzipped Size:\" && cross-var strip-json-comments --no-whitespace $npm_package_umd_main | gzip-size"
+  // },
+  // "config": {
+  //   "commitizen": {
+  //     "path": "./node_modules/cz-conventional-changelog"
+  //   },
+  //   "validate-commit-msg": {
+  //     "types": "conventional-commit-types",
+  //     "maxSubjectLength": 120
+  //   }
+  // },
+  // "jest": {
+  //   "globals": {
+  //     "__TS_CONFIG__": {
+  //       "module": "commonjs"
+  //     }
+  //   },
+  //   "roots": [
+  //     "<rootDir>/src"
+  //   ],
+  //   "transform": {
+  //     ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+  //   },
+  //   "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+  //   "moduleFileExtensions": [
+  //     "ts",
+  //     "tsx",
+  //     "js"
+  //   ],
+  //   "modulePathIgnorePatterns": [
+  //     "/^((?!src).)/"
+  //   ],
+  //   "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
+  //   "coveragePathIgnorePatterns": [
+  //     "<rootDir>/node_modules/",
+  //     "<rootDir>/lib/",
+  //     "<rootDir>/lib-esm/",
+  //     "<rootDir>/umd/",
+  //     "<rootDir>/src/.*(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
+  //   ],
+  //   "coverageThreshold": {
+  //     "global": {
+  //       "branches": 80,
+  //       "functions": 80,
+  //       "lines": 80,
+  //       "statements": 85
+  //     }
+  //   }
+  // },
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "19.2.2",
