--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/jasmine": "^2.5.52",
     "@types/jest": "19.2.2",
     "awesome-typescript-loader": "3.1.2",
     "commitizen": "2.9.6",
